--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -3,13 +3,10 @@
 </a>
 <ul class="dropdown-menu">
   <li>
-  <a href="#" data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
+  <a href="#" data-ng-click="setCurrency('HLC')" data-ng-class="{active: currency.symbol == 'HLC'}">HLC</a>
   </li>
   <li>
-  <a href="#" data-ng-click="setCurrency('BTC')" data-ng-class="{active: currency.symbol == 'BTC'}">BTC</a>
-  </li>
-  <li>
-  <a href="#" data-ng-click="setCurrency('mBTC')" data-ng-class="{active: currency.symbol == 'mBTC'}">mBTC</a>
+  <a href="#" data-ng-click="setCurrency('mHLC')" data-ng-class="{active: currency.symbol == 'mHLC'}">mHLC</a>
   </li> 
 </ul>
 
