--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,6 @@
               <th>Height</th>
               <th>Age</th>
               <th class="text-right"><span class="ellipsis">Transactions</span></th>
-              <th class="text-right"><span class="ellipsis">Mined by</span></th>
               <th class="text-right">Size</th>
             </tr>
           </thead>
@@ -28,7 +27,6 @@
             </td>
             <td><span class="ellipsis">{{humanSince(b.time)}}</span></td>
             <td class="text-right">{{b.txlength}}</td>
-            <td class="text-right"><a href="{{b.poolInfo.url}}" title="{{b.poolInfo.poolName}}" target="_blank" data-ng-show="b.poolInfo">{{b.poolInfo.poolName}}</a></td>
             <td class="text-right">{{b.size}} bytes</td>
           </tr>
           </tbody>
@@ -52,30 +50,11 @@
             <td>
               <a class="ellipsis" href="/tx/{{tx.txid}}">{{tx.txid}}</a>
             </td>
-            <td class="text-right"><span class="ellipsis">{{tx.valueOut}} BTC</span></td>
+            <td class="text-right"><span class="ellipsis">{{tx.valueOut}} HLC</span></td>
           </tr>
           </tbody>
         </table>
-
       </div>
-
-      <div class="col-xs-12 col-md-4 col-gray">
-        <h2> About </h2>
-        <p><strong>insight</strong>  is an <a href="http://live.insight.is/" target="_blank">open-source Bitcoin blockchain explorer</a> with complete REST
-and websocket APIs that can be used for writing web wallets and other apps 
-that need more advanced blockchain queries than provided by bitcoind RPC. 
-Check out the <a href="http://github.com/bitpay/insight" target="_blank">source code</a>.</p>
-        <p><strong>insight</strong> is still in development, so be sure to report any bugs and provide feedback for improvement at our <a href="https://github.com/bitpay/insight/issues" target="_blank">github issue tracker</a>.</p>
-        <div id="powered" class="row">
-          <div class="powered-text">
-            <small class="text-muted">Powered by</small>
-          </div>
-          <a href="http://bitcore.io" target="_blank" class="bitcore" title="Bitcore"></a>
-          <a href="http://angularjs.org" target="_blank" class="angularjs" title="AngularJS"></a>
-          <a href="https://code.google.com/p/leveldb/" target="_blank" class="leveldb" title="LevelDB"></a>
-          <a href="http://nodejs.org" target="_blank" class="nodejs" title="NodeJs"></a>
-        </div>
-      </div> <!-- END OF COL-3 -->
     </div>
   </div>
 </section>
